--- a/node/package.json
+++ b/node/package.json
@@ -1,13 +1,5 @@
 {
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "commander": "^8.3.0",
-    "cors": "^2.8.5",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "morgan": "^1.9.1",
-    "mqtt": "^4.2.8",
-    "nodemon": "^2.0.15",
-    "socket.io": "^2.2.0"
+    "express": "^4.17.1"
   }
 }
