--- a/node/package.json
+++ b/node/package.json
@@ -1,5 +1,13 @@
 {
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+  "name":"edge2cloud",
+  "version":"1.0.0",
+  "description":"Node on Docker",
+  "author":"Salih Tuncer",
+  "main":"app.js",
+  "scripts":
+    {"start":"node app.js"},
+  "dependencies":
+    {"express":"^4.17.1"},
+  "devDependencies":
+    {"nodemon":"^2.0.15"}
 }
