trendline added filesizes are now shown correctly -> they are now transported via mqtt directory structure adjusted mqtt_client class added which is an oo-class intervals can now be changed in the frontend docker-compose adjusted because of the new directory sructure refs #1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,5 @@ services:
     ports:
       - "2000:2000"
     tty: true
-    command: python health_monitoring/publisher.py
+    command: python health_monitoring.py
 
