--- a/node/package.json
+++ b/node/package.json
@@ -1,13 +1,25 @@
 {
-  "name":"edge2cloud",
-  "version":"1.0.0",
-  "description":"Node on Docker",
-  "author":"Salih Tuncer",
-  "main":"app.js",
-  "scripts":
-    {"start":"node app.js"},
-  "dependencies":
-    {"express":"^4.17.1"},
-  "devDependencies":
-    {"nodemon":"^2.0.15"}
+  "name": "edge2cloud",
+  "version": "1.0.0",
+  "description": "Node on Docker",
+  "author": "Salih Tuncer",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.4.1"
+  }
 }
